--- a/requirements.txt
+++ b/requirements.txt
@@ -115,6 +115,7 @@ pandas==1.4.1
 pandocfilters==1.5.0
 parallel-ssh==2.8.0
 parso==0.8.3
+pathlib==1.0.1
 pathspec==0.9.0
 pexpect==4.8.0
 pickleshare==0.7.5
