--- a/autorec/config/ml-1m-item.yaml
+++ b/autorec/config/ml-1m-item.yaml
@@ -11,10 +11,10 @@ movielens_10m:
 train_module:
   init_lr: 0.001
   hidden_size: 500
-  optimizer: rmsprop
+  optimizer: adam
 
 data_module:
-  batch_size: 100
+  batch_size: 128
   data_root: ./data
   data_size: 1m
   model_type: item
